WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305652
Fix Immersive Model lifecycle issues
https://bugs.webkit.org/show_bug.cgi?id=305652
Summary
Fix Immersive Model lifecycle issues
Jean Haberer
Reported
2026-01-16 10:12:27 PST
The immersive model doesn't go away on navigation, and the client app can permanently retain the model representation if they don't call back.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean Haberer
Comment 1
2026-01-16 10:12:29 PST
<
rdar://problem/166174678
>
Jean Haberer
Comment 2
2026-01-16 10:21:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56721
EWS
Comment 3
2026-01-20 03:44:06 PST
Committed
305872@main
(4383b18cfe52): <
https://commits.webkit.org/305872@main
> Reviewed commits have been landed. Closing PR #56721 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug