Fix Immersive Model lifecycle issues https://bugs.webkit.org/show_bug.cgi?id=305652 rdar://166174678

Reviewed by Etienne Segonzac.

Make sure the immersive state lifecycle follows the page's.

* Source/WebCore/dom/DocumentImmersive.h:
* Source/WebCore/dom/DocumentImmersive.cpp:
Break down exit method for readability.

* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):
(WebKit::WebPageProxy::commitProvisionalPage):
(WebKit::WebPageProxy::presentImmersiveElement):
(WebKit::WebPageProxy::dismissImmersiveElement):
(WebKit::WebPageProxy::presentImmersiveElement const): Deleted.
(WebKit::WebPageProxy::dismissImmersiveElement const): Deleted.
Since the IPC connection is closed, the dismissal signal from the web process will not go through,
Thus we manually need to trigger a client immersive dismissal when it closes.

Canonical link: https://commits.webkit.org/305872@main